# hublive

./: .gitignore  CLAUDE.md  README.md
CLIENT/: BUILD_GUIDE.md  CMakeLists.txt  README.md  build.bat  config.yaml
CLIENT/.claude/: settings.json
CLIENT/.claude/commands/: implement-repo.md  review.md  security-check.md
CLIENT/.claude/skills/api-controller/: SKILL.md
CLIENT/.claude/skills/error-handling/: SKILL.md
CLIENT/.claude/skills/memory-safety/: SKILL.md
CLIENT/.claude/skills/security-pattern/: SKILL.md
CLIENT/.claude/skills/sqlite-pattern/: SKILL.md
CLIENT/.claude/skills/testing-pattern/: SKILL.md
CLIENT/.claude/skills/threading-pattern/: SKILL.md
CLIENT/cmake/: repack_thin_lib.py
CLIENT/proto/: hublive_models.proto  hublive_rtc.proto
CLIENT/src/: audio_capture.cc  audio_capture.h  audio_mixer.cc  audio_mixer.h  audio_resampler.cc  audio_resampler.h  config.cc  config.h  custom_audio_source.cc  custom_audio_source.h  input_injector.cc  input_injector.h  json_lite.h  jwt_token.cc  jwt_token.h  logger.h  main.cc  peer_connection_agent.cc  peer_connection_agent.h  screen_capture_source.cc  screen_capture_source.h  signaling_client.cc  signaling_client.h  websocket_transport.cc  websocket_transport.h  whip_client.cc  whip_client.h
SERVER/: .gitignore  .goreleaser.yaml  CHANGELOG.md  Dockerfile  NOTICE  README.md  bootstrap.sh  config-sample.yaml  go.mod  install-hublive.sh  magefile.go  magefile_unix.go  magefile_windows.go  renovate.json  skills-lock.json
SERVER/.github/ISSUE_TEMPLATE/: bug_report.md
SERVER/.github/workflows/: buildtest.yaml  docker.yaml  release.yaml  slack-notifier.yaml
SERVER/cmd/server/: commands.go  main.go  main_test.go
SERVER/deploy/: README.md
SERVER/deploy/grafana/: hublive-server-overview.json
SERVER/docs/refactor/: plan-supplement.md  prompts-roadmap.md
SERVER/docs/refactor/audit/: SUMMARY.md  build-status.txt  errors.txt  external-imports.txt  fakes.txt  init-functions.txt  service-deps.txt  structure.txt
SERVER/pkg/: ARCHITECTURE.md
SERVER/pkg/agent/: agent_test.go  client.go  worker.go
SERVER/pkg/agent/testutils/: server.go
SERVER/pkg/api/middleware/: auth.go  basic_auth.go
SERVER/pkg/clientconfiguration/: conf.go  conf_test.go  match.go  staticconfiguration.go  types.go
SERVER/pkg/config/: config.go  config_test.go
SERVER/pkg/domain/: verify_test.go
SERVER/pkg/domain/agent/: interfaces.go
SERVER/pkg/domain/participant/: interfaces.go
SERVER/pkg/domain/room/: interfaces.go
SERVER/pkg/metric/: metric_config.go  metric_timestamper.go  metrics_collector.go  metrics_reporter.go
SERVER/pkg/routing/: errors.go  interfaces.go  localrouter.go  messagechannel.go  messagechannel_test.go  node.go  nodestats.go  redisrouter.go  roommanager.go  signal.go
SERVER/pkg/rtc/: clientinfo.go  clientinfo_test.go  config.go  datadowntrack.go  datatrack.go  egress.go  errors.go  mediaengine.go  mediaengine_test.go  medialossproxy.go  mediatrack.go  mediatrack_test.go  mediatrackreceiver.go  mediatracksubscriptions.go  migrationdatacache.go  migrationdatacache_test.go  participant.go  participant_data_track.go  participant_internal_test.go  participant_publisher.go  participant_sdp.go  participant_signal.go  participant_subscriber.go  room.go  room_test.go  roomtrackmanager.go  signalanddatastats.go  subscribedtrack.go  subscriptionmanager.go  subscriptionmanager_test.go  testutils.go  transport.go  transport_ice.go  transport_negotiation.go  transport_test.go  transportmanager.go  updatatrackmanager.go  uptrackmanager.go  uptrackmanager_test.go  user_packet_deduper.go  (+3 more)
SERVER/pkg/service/: agent_dispatch_service.go  agentservice.go  auth.go  auth_test.go  basic_auth.go  clients.go  compat_store.go  docker_test.go  egress.go  egressid.go  errors.go  ingress.go  interfaces.go  ioservice.go  ioservice_ingress.go  ioservice_sip.go  ioservice_sip_test.go  redisstore_sip_test.go  redisstore_test.go  roomallocator.go  roomallocator_test.go  roommanager.go  roommanager_service.go  roomservice.go  roomservice_test.go  rtcservice.go  server.go  signal.go  signal_test.go  sip.go  turn.go  twirp.go  twirp_test.go  utils.go  utils_test.go  whipservice.go  wire.go  wire_gen.go  wsprotocol.go
SERVER/pkg/sfu/: downtrack.go  errors.go  forwarder.go  forwarder_test.go  forwardstats.go  playoutdelay.go  playoutdelay_test.go  receiver.go  receiver_base.go  receiver_test.go  redprimaryreceiver.go  redreceiver.go  redreceiver_test.go  rtpmunger.go  rtpmunger_test.go  sequencer.go  sequencer_test.go  sfu.go  streamtrackermanager.go  track_remote.go
SERVER/pkg/store/: errors.go  interfaces.go
SERVER/pkg/telemetry/: analyticsservice.go  events.go  events_test.go  stats.go  stats_test.go  statsconn.go  statsworker.go  telemetryservice.go
SERVER/pkg/testutils/: timeout.go
SERVER/pkg/transport/: interfaces.go  registry.go  signal.go
SERVER/pkg/utils/: changenotifier.go  context.go  iceconfigcache.go  iceconfigcache_test.go  incrementaldispatcher.go  incrementaldispatcher_test.go  logging.go  math.go  opsqueue.go  protocol.go
SERVER/scripts/: check-imports.sh
SERVER/test/: agent.go  agent_test.go  integration_helpers.go  multinode_roomservice_test.go  multinode_test.go  scenarios.go  singlenode_test.go  webhook_test.go
SERVER/test/client/: client.go  datachannel_reader.go  datatrack_remote.go  datatrack_writer.go  trackwriter.go
SERVER/tools/: tools.go
SERVER/version/: version.go
WEB/: components.json  index.html  package-lock.json  package.json  viewer.html
WEB/.claude/: settings.json
WEB/.claude/commands/: new-component.md  new-page.md  review.md
WEB/src/: main.tsx  vite-env.d.ts
WEB/src/app/: providers.tsx  router.tsx
WEB/src/layouts/: AuthLayout.tsx  MainLayout.tsx  RootLayout.tsx
WEB/src/lib/: axios.ts  i18n.ts  jwt.ts
WEB/src/locales/: en.json  vi.json  zh.json
WEB/src/styles/: globals.css
deploy/: vps.md
docs/superpowers/plans/: 2026-03-30-cpp-screen-agent.md
docs/superpowers/specs/: 2026-03-30-agent-missing-features.md  2026-03-30-wcap-web-dashboard-design.md
(+240 files in other folders)
